--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ch06_1_activity</string>
+    <string name="long_text">동해물과 백두산이 마르고 닳도록 \n 하느님이 보우하사 우리나라 만세 \n 무궁화 삼천리 화려강산 \n 대한사람 대한으로 길이 보전하세\n</string>
 </resources>
